fixed bleeding player pictures

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
  #root {
-   background-color: black;
+   background-color: #041914;
  }
  
  .test{
@@ -21,7 +21,6 @@
    background-size: cover;
    background-position: center;
  } */
-
 
  .head-pic {
    /* background-color: red; */
@@ -58,8 +57,9 @@
   order:3;
   width: 300px;
   height: 500px;
-  margin-top: 150px;
-  margin-left: -100px;
+  background: fixed;
+  /* margin-top: 150px; */
+  /* margin-left: -100px; */
 }
 
 .players {
@@ -67,13 +67,20 @@
   width: 600px;
   height: 700px;
   margin-top: 45px;
-  margin-left: -230px;
+  margin-left: -270px;
 }
 
 .formations {
   flex: 1;
 }
 .formations-wrapper {
+  top: 0;
+  display: flex;
+  flex-direction: row;
+  /* align-items: center; */
+}
+
+.formations-wrapper2 {
   top: 0;
   display: flex;
   flex-direction: row;
@@ -100,4 +107,20 @@
   .players {
     width: 90%;
   }
+}
+
+/* #test {
+  background-image: url('/public/images/bg2.webp');
+  background-attachment: fixed;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 100%;
+} */
+
+.custom-select {
+  width: 70%;
+  max-width: 500px;
+  position: center;
+  margin: auto;
 }
